tests/snapshots/run_wpt_conformance__coreml_minValue_as_NaN.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "clamp.https.any.js",
    "minValue as NaN",
    "coreml",
    "PASS",
)
